Andrew/lab/chap10/MiniJavaLexer.jj
options {
  JAVA_UNICODE_ESCAPE = true;
}

PARSER_BEGIN(MiniJavaParser)
  import syntaxtree.*;
  
  public class MiniJavaParser {}
PARSER_END(MiniJavaParser)


SKIP : {
  " " | "\t" | "\r" | "\n"
}

SPECIAL_TOKEN : /* COMMENTS */
{
  <SINGLE_LINE_COMMENT: "//" (~["\n","\r"])* ("\n"|"\r"|"\r\n")>
| <FORMAL_COMMENT: "/**" (~["*"])* "*" ("*" | (~["*","/"] (~["*"])* "*"))* "/">
| <MULTI_LINE_COMMENT: "/*" (~["*"])* "*" ("*" | (~["*","/"] (~["*"])* "*"))* "/">
}

// <DIGIT>
// ['0'..'9']

// <IDENTIFIER>
// ['a'..'z''A'..'Z'] ( ['a'..'z''A'..'Z'] | (digit) )*

// <INTEGER_LITERAL>
// digit+

TOKEN : {
  < CLASS: "class" >
| < PUBLIC: "public" >
| < STATIC: "static" >
| < VOID: "void" >
| < MAIN: "main" >
| < STRING: "String" >
| < EXTENDS: "extends" >
| < RETURN: "return" >
| < INT: "int" >
| < BOOLEAN: "boolean" >
| < IF: "if" >
| < ELSE: "else" >
| < WHILE: "while" >
| < TRUE: "true" >
| < FALSE: "false" >
| < THIS: "this" >
| < NEW: "new" >
| < LENGTH: "length" >
| < PRINTLN: "System.out.println" >
| < ANDAND: "&&" >
| < #DIGIT: ["0"-"9"] >
| < IDENTIFIER: ["_", "a"-"z","A"-"Z"] (["_", "a"-"z","A"-"Z"] | <DIGIT>)* >
| < INTEGER_LITERAL: (<DIGIT>)+ >
| < LBRACE:"{" > | < RBRACE:"}" > | < LPAREN:"(" > | < RPAREN:")" >
| < LBRACK:"[" > | < RBRACK:"]" > | < SEMI:";" > | < COMMA:"," >
| < ASSIGN:"=" > | < LT:"<" > | < PLUS:"+" > | < MINUS:"-" > | < STAR:"*" >
| < DOT:"." > | < BANG:"!" >
}

/**
 * The MiniJava Grammar with AST construction
 */

Program Goal() :
{ MainClass m; ClassDeclList cl = new ClassDeclList(); ClassDecl cd; }
{
  m=MainClass()
  ( cd=TypeDeclaration() { cl.addElement(cd); } )*
  <EOF>
  { return new Program(m, cl); }
}

MainClass MainClass() :
{ Identifier i1; Identifier i2; Statement s; }
{
  "class" i1=Identifier() "{"
    "public" "static" "void" "main" "(" "String" "[" "]" i2=Identifier() ")"   
    "{" ( LOOKAHEAD(2) VarDeclaration() )* s=Statement() "}"
  "}"
  { return new MainClass(i1, i2, s); }
}

ClassDecl TypeDeclaration() :  
{ ClassDecl c; }
{ 
  LOOKAHEAD(3)
  c=ClassDeclaration() { return c; }
|
  c=ClassExtendsDeclaration() { return c; }
}

ClassDecl ClassDeclaration() :
{ Identifier i; VarDecl v; VarDeclList vl = new VarDeclList(); MethodDecl md; MethodDeclList ml = new MethodDeclList(); }
{
  "class" i=Identifier() "{" ( v=VarDeclaration() { vl.addElement(v); } )* 
                           ( md=MethodDeclaration() { ml.addElement(md); } )* 
                       "}"
  { return new ClassDeclSimple(i, vl, ml); }
}

ClassDecl ClassExtendsDeclaration() :
{ Identifier i; Identifier j; VarDecl v; VarDeclList vl = new VarDeclList(); MethodDecl md; MethodDeclList ml = new MethodDeclList(); }
{
  "class" i=Identifier() "extends" j=Identifier()
                       "{" ( v=VarDeclaration() { vl.addElement(v); } )* 
                           ( md=MethodDeclaration() { ml.addElement(md); } )* 
                       "}"
  { return new ClassDeclExtends(i, j, vl, ml); }
}

VarDecl VarDeclaration() :  
{ Type t; Identifier i; }
{ 
  t=Type() i=Identifier() ";"      
  { return new VarDecl(t, i); }
}

MethodDecl MethodDeclaration() :  
{ Type t; Identifier i; FormalList fl = new FormalList(); Formal f; VarDecl v; VarDeclList vl = new VarDeclList(); Statement s; StatementList sl = new StatementList(); Exp e; }
{
  "public" t=Type() i=Identifier() 
  "(" ( f=FormalParameter() { fl.addElement(f); } ( FormalParameterRest(fl) )* )? ")"   
  "{" ( LOOKAHEAD(2) v=VarDeclaration() { vl.addElement(v); } )* 
      ( s=Statement() { sl.addElement(s); } )* "return" e=Expression() ";" "}"
  { return new MethodDecl(t, i, fl, vl, sl, e); }
}

Formal FormalParameter() :
{ Type t; Identifier i; }
{
  t=Type() i=Identifier() { return new Formal(t, i); }
}

void FormalParameterRest(FormalList fl) :
{ Formal f; }
{
  "," f=FormalParameter() { fl.addElement(f); }
}

Type Type() :
{ Type t; Token id; }
{
  LOOKAHEAD(3)
  t=ArrayType() { return t; }
|
  t=BooleanType() { return t; }
|
  t=IntegerType() { return t; }
|
  id=<IDENTIFIER> { return new IdentifierType(id.image); }    
}

Type ArrayType() :
{}
{
  "int" "[" "]" { return new IntArrayType(); }
}

Type BooleanType() :
{}
{
  "boolean" { return new BooleanType(); }
}

Type IntegerType() :
{}
{
  "int" { return new IntegerType(); }
}

Statement Statement() :
{ Statement s; }
{
  s=Block() { return s; }
| 
  LOOKAHEAD(2)
  s=AssignmentStatement() { return s; }
|
  LOOKAHEAD(2)
  s=ArrayAssignmentStatement() { return s; }
|
  s=IfStatement() { return s; }
|
  s=WhileStatement() { return s; }
|
  s=PrintStatement() { return s; }
}

Statement Block() :
{ Statement s; StatementList sl = new StatementList(); }
{
  "{" ( s=Statement() { sl.addElement(s); } )* "}" { return new Block(sl); }
}

Statement AssignmentStatement() :
{ Identifier i; Exp e; }
{
  i=Identifier() "=" e=Expression() ";" { return new Assign(i, e); }
}

Statement ArrayAssignmentStatement() :
{ Identifier i; Exp e1; Exp e2; }
{
  i=Identifier() "[" e1=Expression() "]" "=" e2=Expression() ";" { return new ArrayAssign(i, e1, e2); }
}

Statement IfStatement() :
{ Exp e; Statement s1; Statement s2; }
{
  "if" "(" e=Expression() ")" s1=Statement() "else" s2=Statement() { return new If(e, s1, s2); } 
}

Statement WhileStatement() :
{ Exp e; Statement s; }
{
  "while" "(" e=Expression() ")" s=Statement() { return new While(e, s); } 
}

Statement PrintStatement() :
{ Exp e; }
{
  "System.out.println" "(" e=Expression() ")" ";" { return new Print(e); }
}

Exp Expression() :
{ Exp e; }
{
  LOOKAHEAD( PrimaryExpression() "&&" )
  e=AndExpression() { return e; }
|
  LOOKAHEAD( PrimaryExpression() "<" )
  e=CompareExpression() { return e; }
|
  LOOKAHEAD( PrimaryExpression() "+" )
  e=PlusExpression() { return e; }
|
  LOOKAHEAD( PrimaryExpression() "-" )
  e=MinusExpression() { return e; }
|
  LOOKAHEAD( PrimaryExpression() "*" )
  e=TimesExpression() { return e; }
|
  LOOKAHEAD( PrimaryExpression() "[" )
  e=ArrayLookup() { return e; }
|
  LOOKAHEAD( PrimaryExpression() "." "length" )
  e=ArrayLength() { return e; }
|
  LOOKAHEAD( PrimaryExpression() "." <IDENTIFIER> "(" )
  e=MessageSend() { return e; }
| 
  e=PrimaryExpression() { return e; }
}

Exp AndExpression() :
{ Exp e1; Exp e2; } 
{
  e1=PrimaryExpression() "&&" e2=PrimaryExpression() { return new And(e1, e2); }
}

Exp CompareExpression() :
{ Exp e1; Exp e2; } 
{
  e1=PrimaryExpression() "<" e2=PrimaryExpression() { return new LessThan(e1, e2); }
}

Exp PlusExpression() :
{ Exp e1; Exp e2; }
{
  e1=PrimaryExpression() "+" e2=PrimaryExpression() { return new Plus(e1, e2); }
}

Exp MinusExpression() :
{ Exp e1; Exp e2; }
{
  e1=PrimaryExpression() "-" e2=PrimaryExpression() { return new Minus(e1, e2); }
}

Exp TimesExpression() :
{ Exp e1; Exp e2; }
{
  e1=PrimaryExpression() "*" e2=PrimaryExpression() { return new Times(e1, e2); }
}

Exp ArrayLookup() :
{ Exp e1; Exp e2; }
{
  e1=PrimaryExpression() "[" e2=PrimaryExpression() "]" { return new ArrayLookup(e1, e2); }
}

Exp ArrayLength() :
{ Exp e; }
{
  e=PrimaryExpression() "." "length" { return new ArrayLength(e); }
}

Exp MessageSend() :
{ Exp e; Identifier id; ExpList el = new ExpList(); }
{
  e=PrimaryExpression() "." id=Identifier() 
  "(" ( el=ExpressionList() )? ")" { return new Call(e, id, el); }
}

ExpList ExpressionList() :
{ ExpList el = new ExpList(); Exp e; }
{
  e=Expression() { el.addElement(e); } ( ExpressionRest(el) )* { return el; }
}

void ExpressionRest(ExpList el) :
{ Exp e; }
{
  "," e=Expression() { el.addElement(e); }
}

Exp PrimaryExpression() :
{ Token t; Exp e; }
{
  e=IntegerLiteral() { return e; }
|
  e=TrueLiteral() { return e; }
|
  e=FalseLiteral() { return e; }
|
  t=<IDENTIFIER> { return new IdentifierExp(t.image); }
|
  e=ThisExpression() { return e; }
|
  LOOKAHEAD(3)
  e=ArrayAllocationExpression() { return e; }
|
  e=AllocationExpression() { return e; }
|   
  e=NotExpression() { return e; }
|   
  e=BracketExpression() { return e; }
}

Exp IntegerLiteral() :
{ Token t; }
{
  t=<INTEGER_LITERAL> { return new IntegerLiteral(Integer.parseInt(t.image)); }
}


Exp TrueLiteral() :
{}
{
  "true" { return new True(); }
}

Exp FalseLiteral() :
{}
{
  "false" { return new False(); }
}

Identifier Identifier() :
{ Token t; }
{
  t=<IDENTIFIER> { return new Identifier(t.image); }
}

Exp ThisExpression() :
{}
{
  "this" { return new This(); }
}

Exp ArrayAllocationExpression() :
{ Exp e; }
{
  "new" "int" "[" e=Expression() "]" { return new NewArray(e); }
}

Exp AllocationExpression() :
{ Identifier id; }
{
  "new" id=Identifier() "(" ")" { return new NewObject(id); }
}

Exp NotExpression() :
{ Exp e; }
{
  "!" e=Expression() { return new Not(e); } 
}

Exp BracketExpression() :
{ Exp e; }
{
  "(" e=Expression() ")" { return e; }
}
