Andrew/lab/chap7/MiniJavaParser.java
/* MiniJavaParser.java */
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
  import syntaxtree.*;

  public class MiniJavaParser implements MiniJavaParserConstants {

/**
 * The MiniJava Grammar with AST construction
 */
  static final public 
Program Goal() throws ParseException {MainClass m; ClassDeclList cl = new ClassDeclList(); ClassDecl cd;
    m = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      cd = TypeDeclaration();
cl.addElement(cd);
    }
    jj_consume_token(0);
{if ("" != null) return new Program(m, cl);}
    throw new Error("Missing return statement in function");
}

  static final public MainClass MainClass() throws ParseException {Identifier i1; Identifier i2; Statement s;
    jj_consume_token(CLASS);
    i1 = Identifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACK);
    jj_consume_token(RBRACK);
    i2 = Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_2;
      }
      VarDeclaration();
    }
    s = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
{if ("" != null) return new MainClass(i1, i2, s);}
    throw new Error("Missing return statement in function");
}

  static final public ClassDecl TypeDeclaration() throws ParseException {ClassDecl c;
    if (jj_2_2(3)) {
      c = ClassDeclaration();
{if ("" != null) return c;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        c = ClassExtendsDeclaration();
{if ("" != null) return c;}
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public ClassDecl ClassDeclaration() throws ParseException {Identifier i; VarDecl v; VarDeclList vl = new VarDeclList(); MethodDecl md; MethodDeclList ml = new MethodDeclList();
    jj_consume_token(CLASS);
    i = Identifier();
    jj_consume_token(LBRACE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      v = VarDeclaration();
vl.addElement(v);
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      md = MethodDeclaration();
ml.addElement(md);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return new ClassDeclSimple(i, vl, ml);}
    throw new Error("Missing return statement in function");
}

  static final public ClassDecl ClassExtendsDeclaration() throws ParseException {Identifier i; Identifier j; VarDecl v; VarDeclList vl = new VarDeclList(); MethodDecl md; MethodDeclList ml = new MethodDeclList();
    jj_consume_token(CLASS);
    i = Identifier();
    jj_consume_token(EXTENDS);
    j = Identifier();
    jj_consume_token(LBRACE);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_5;
      }
      v = VarDeclaration();
vl.addElement(v);
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_6;
      }
      md = MethodDeclaration();
ml.addElement(md);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return new ClassDeclExtends(i, j, vl, ml);}
    throw new Error("Missing return statement in function");
}

  static final public VarDecl VarDeclaration() throws ParseException {Type t; Identifier i;
    t = Type();
    i = Identifier();
    jj_consume_token(SEMI);
{if ("" != null) return new VarDecl(t, i);}
    throw new Error("Missing return statement in function");
}

  static final public MethodDecl MethodDeclaration() throws ParseException {Type t; Identifier i; FormalList fl = new FormalList(); Formal f; VarDecl v; VarDeclList vl = new VarDeclList(); Statement s; StatementList sl = new StatementList(); Exp e;
    jj_consume_token(PUBLIC);
    t = Type();
    i = Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case BOOLEAN:
    case IDENTIFIER:{
      f = FormalParameter();
fl.addElement(f);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_7;
        }
        FormalParameterRest(fl);
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_8:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_8;
      }
      v = VarDeclaration();
vl.addElement(v);
    }
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case PRINTLN:
      case IDENTIFIER:
      case LBRACE:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_9;
      }
      s = Statement();
sl.addElement(s);
    }
    jj_consume_token(RETURN);
    e = Expression();
    jj_consume_token(SEMI);
    jj_consume_token(RBRACE);
{if ("" != null) return new MethodDecl(t, i, fl, vl, sl, e);}
    throw new Error("Missing return statement in function");
}

  static final public Formal FormalParameter() throws ParseException {Type t; Identifier i;
    t = Type();
    i = Identifier();
{if ("" != null) return new Formal(t, i);}
    throw new Error("Missing return statement in function");
}

  static final public void FormalParameterRest(FormalList fl) throws ParseException {Formal f;
    jj_consume_token(COMMA);
    f = FormalParameter();
fl.addElement(f);
}

  static final public Type Type() throws ParseException {Type t; Token id;
    if (jj_2_4(3)) {
      t = ArrayType();
{if ("" != null) return t;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BOOLEAN:{
        t = BooleanType();
{if ("" != null) return t;}
        break;
        }
      case INT:{
        t = IntegerType();
{if ("" != null) return t;}
        break;
        }
      case IDENTIFIER:{
        id = jj_consume_token(IDENTIFIER);
{if ("" != null) return new IdentifierType(id.image);}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public Type ArrayType() throws ParseException {
    jj_consume_token(INT);
    jj_consume_token(LBRACK);
    jj_consume_token(RBRACK);
{if ("" != null) return new IntArrayType();}
    throw new Error("Missing return statement in function");
}

  static final public Type BooleanType() throws ParseException {
    jj_consume_token(BOOLEAN);
{if ("" != null) return new BooleanType();}
    throw new Error("Missing return statement in function");
}

  static final public Type IntegerType() throws ParseException {
    jj_consume_token(INT);
{if ("" != null) return new IntegerType();}
    throw new Error("Missing return statement in function");
}

  static final public Statement Statement() throws ParseException {Statement s;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACE:{
      s = Block();
{if ("" != null) return s;}
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      if (jj_2_5(2)) {
        s = AssignmentStatement();
{if ("" != null) return s;}
      } else if (jj_2_6(2)) {
        s = ArrayAssignmentStatement();
{if ("" != null) return s;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:{
          s = IfStatement();
{if ("" != null) return s;}
          break;
          }
        case WHILE:{
          s = WhileStatement();
{if ("" != null) return s;}
          break;
          }
        case PRINTLN:{
          s = PrintStatement();
{if ("" != null) return s;}
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public Statement Block() throws ParseException {Statement s; StatementList sl = new StatementList();
    jj_consume_token(LBRACE);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case PRINTLN:
      case IDENTIFIER:
      case LBRACE:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_10;
      }
      s = Statement();
sl.addElement(s);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return new Block(sl);}
    throw new Error("Missing return statement in function");
}

  static final public Statement AssignmentStatement() throws ParseException {Identifier i; Exp e;
    i = Identifier();
    jj_consume_token(ASSIGN);
    e = Expression();
    jj_consume_token(SEMI);
{if ("" != null) return new Assign(i, e);}
    throw new Error("Missing return statement in function");
}

  static final public Statement ArrayAssignmentStatement() throws ParseException {Identifier i; Exp e1; Exp e2;
    i = Identifier();
    jj_consume_token(LBRACK);
    e1 = Expression();
    jj_consume_token(RBRACK);
    jj_consume_token(ASSIGN);
    e2 = Expression();
    jj_consume_token(SEMI);
{if ("" != null) return new ArrayAssign(i, e1, e2);}
    throw new Error("Missing return statement in function");
}

  static final public Statement IfStatement() throws ParseException {Exp e; Statement s1; Statement s2;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    s1 = Statement();
    jj_consume_token(ELSE);
    s2 = Statement();
{if ("" != null) return new If(e, s1, s2);}
    throw new Error("Missing return statement in function");
}

  static final public Statement WhileStatement() throws ParseException {Exp e; Statement s;
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    s = Statement();
{if ("" != null) return new While(e, s);}
    throw new Error("Missing return statement in function");
}

  static final public Statement PrintStatement() throws ParseException {Exp e;
    jj_consume_token(PRINTLN);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMI);
{if ("" != null) return new Print(e);}
    throw new Error("Missing return statement in function");
}

  static final public Exp Expression() throws ParseException {Exp e;
    if (jj_2_7(2147483647)) {
      e = AndExpression();
{if ("" != null) return e;}
    } else if (jj_2_8(2147483647)) {
      e = CompareExpression();
{if ("" != null) return e;}
    } else if (jj_2_9(2147483647)) {
      e = PlusExpression();
{if ("" != null) return e;}
    } else if (jj_2_10(2147483647)) {
      e = MinusExpression();
{if ("" != null) return e;}
    } else if (jj_2_11(2147483647)) {
      e = TimesExpression();
{if ("" != null) return e;}
    } else if (jj_2_12(2147483647)) {
      e = ArrayLookup();
{if ("" != null) return e;}
    } else if (jj_2_13(2147483647)) {
      e = ArrayLength();
{if ("" != null) return e;}
    } else if (jj_2_14(2147483647)) {
      e = MessageSend();
{if ("" != null) return e;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TRUE:
      case FALSE:
      case THIS:
      case NEW:
      case IDENTIFIER:
      case INTEGER_LITERAL:
      case LPAREN:
      case BANG:{
        e = PrimaryExpression();
{if ("" != null) return e;}
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public Exp AndExpression() throws ParseException {Exp e1; Exp e2;
    e1 = PrimaryExpression();
    jj_consume_token(ANDAND);
    e2 = PrimaryExpression();
{if ("" != null) return new And(e1, e2);}
    throw new Error("Missing return statement in function");
}

  static final public Exp CompareExpression() throws ParseException {Exp e1; Exp e2;
    e1 = PrimaryExpression();
    jj_consume_token(LT);
    e2 = PrimaryExpression();
{if ("" != null) return new LessThan(e1, e2);}
    throw new Error("Missing return statement in function");
}

  static final public Exp PlusExpression() throws ParseException {Exp e1; Exp e2;
    e1 = PrimaryExpression();
    jj_consume_token(PLUS);
    e2 = PrimaryExpression();
{if ("" != null) return new Plus(e1, e2);}
    throw new Error("Missing return statement in function");
}

  static final public Exp MinusExpression() throws ParseException {Exp e1; Exp e2;
    e1 = PrimaryExpression();
    jj_consume_token(MINUS);
    e2 = PrimaryExpression();
{if ("" != null) return new Minus(e1, e2);}
    throw new Error("Missing return statement in function");
}

  static final public Exp TimesExpression() throws ParseException {Exp e1; Exp e2;
    e1 = PrimaryExpression();
    jj_consume_token(STAR);
    e2 = PrimaryExpression();
{if ("" != null) return new Times(e1, e2);}
    throw new Error("Missing return statement in function");
}

  static final public Exp ArrayLookup() throws ParseException {Exp e1; Exp e2;
    e1 = PrimaryExpression();
    jj_consume_token(LBRACK);
    e2 = PrimaryExpression();
    jj_consume_token(RBRACK);
{if ("" != null) return new ArrayLookup(e1, e2);}
    throw new Error("Missing return statement in function");
}

  static final public Exp ArrayLength() throws ParseException {Exp e;
    e = PrimaryExpression();
    jj_consume_token(DOT);
    jj_consume_token(LENGTH);
{if ("" != null) return new ArrayLength(e);}
    throw new Error("Missing return statement in function");
}

  static final public Exp MessageSend() throws ParseException {Exp e; Identifier id; ExpList el = new ExpList();
    e = PrimaryExpression();
    jj_consume_token(DOT);
    id = Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case IDENTIFIER:
    case INTEGER_LITERAL:
    case LPAREN:
    case BANG:{
      el = ExpressionList();
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
{if ("" != null) return new Call(e, id, el);}
    throw new Error("Missing return statement in function");
}

  static final public ExpList ExpressionList() throws ParseException {ExpList el = new ExpList(); Exp e;
    e = Expression();
el.addElement(e);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_11;
      }
      ExpressionRest(el);
    }
{if ("" != null) return el;}
    throw new Error("Missing return statement in function");
}

  static final public void ExpressionRest(ExpList el) throws ParseException {Exp e;
    jj_consume_token(COMMA);
    e = Expression();
el.addElement(e);
}

  static final public Exp PrimaryExpression() throws ParseException {Token t; Exp e;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER_LITERAL:{
      e = IntegerLiteral();
{if ("" != null) return e;}
      break;
      }
    case TRUE:{
      e = TrueLiteral();
{if ("" != null) return e;}
      break;
      }
    case FALSE:{
      e = FalseLiteral();
{if ("" != null) return e;}
      break;
      }
    case IDENTIFIER:{
      t = jj_consume_token(IDENTIFIER);
{if ("" != null) return new IdentifierExp(t.image);}
      break;
      }
    case THIS:{
      e = ThisExpression();
{if ("" != null) return e;}
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      if (jj_2_15(3)) {
        e = ArrayAllocationExpression();
{if ("" != null) return e;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NEW:{
          e = AllocationExpression();
{if ("" != null) return e;}
          break;
          }
        case BANG:{
          e = NotExpression();
{if ("" != null) return e;}
          break;
          }
        case LPAREN:{
          e = BracketExpression();
{if ("" != null) return e;}
          break;
          }
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public Exp IntegerLiteral() throws ParseException {Token t;
    t = jj_consume_token(INTEGER_LITERAL);
{if ("" != null) return new IntegerLiteral(Integer.parseInt(t.image));}
    throw new Error("Missing return statement in function");
}

  static final public Exp TrueLiteral() throws ParseException {
    jj_consume_token(TRUE);
{if ("" != null) return new True();}
    throw new Error("Missing return statement in function");
}

  static final public Exp FalseLiteral() throws ParseException {
    jj_consume_token(FALSE);
{if ("" != null) return new False();}
    throw new Error("Missing return statement in function");
}

  static final public Identifier Identifier() throws ParseException {Token t;
    t = jj_consume_token(IDENTIFIER);
{if ("" != null) return new Identifier(t.image);}
    throw new Error("Missing return statement in function");
}

  static final public Exp ThisExpression() throws ParseException {
    jj_consume_token(THIS);
{if ("" != null) return new This();}
    throw new Error("Missing return statement in function");
}

  static final public Exp ArrayAllocationExpression() throws ParseException {Exp e;
    jj_consume_token(NEW);
    jj_consume_token(INT);
    jj_consume_token(LBRACK);
    e = Expression();
    jj_consume_token(RBRACK);
{if ("" != null) return new NewArray(e);}
    throw new Error("Missing return statement in function");
}

  static final public Exp AllocationExpression() throws ParseException {Identifier id;
    jj_consume_token(NEW);
    id = Identifier();
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
{if ("" != null) return new NewObject(id);}
    throw new Error("Missing return statement in function");
}

  static final public Exp NotExpression() throws ParseException {Exp e;
    jj_consume_token(BANG);
    e = Expression();
{if ("" != null) return new Not(e);}
    throw new Error("Missing return statement in function");
}

  static final public Exp BracketExpression() throws ParseException {Exp e;
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }
